# Galena

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  main.yml
engine/: CMakeLists.txt
engine/include/Galena/: GEngine.h  GEngineDesc.h  GMath.h  GPostprocess.h  GTextureDesc.h  GTextureSampler.h  GVersion.h
engine/samples/: LoadTexture.cpp  WalkAround.cpp
engine/src/: GEngine.cpp  GEngineData.cpp  GEngineData.h  GEngineResources.cpp  GHwBuffer.cpp  GHwBuffer.h  GImage.cpp  GImage.h  GPostprocessRenderer.cpp  GRenderUtils.h  GShader.h  GTexture.h  GVersion.cpp  GVersion.cpp.in
engine/src/shaders/: Blend.fs  Blit.fs  CRT.fs  GShaderData.cpp  GShaderData.cpp.in  GShaderData.h  GaussianBlur.fs  Invert.fs
game/: CMakeLists.txt
game/src/: GGameConstants.h  GGameInputState.h  GGameInstance.cpp  GGameInstance.h  GGameObject.h  GGameTextureKey.h  main.cpp
html/: index.html
html/css/: styles.css
include/Galena/: GEngine.h  GEngineDesc.h  GPostprocess.h  GRenderDesc.h
samples/: LoadTexture.cpp  PrintVersion.cpp  SurfaceDraw.cpp  WalkAround.cpp
src/: GEngine.cpp  GEngineData.cpp  GEngineData.h  GEngineResources.cpp  GEngineResources.h  GEngineState.h  GFramebuffer.cpp  GFramebuffer.h  GImage.cpp  GImage.h  GPostprocessRenderer.cpp  GPostprocessRenderer.h  GShader.cpp  GTexture.cpp  GTexture.h  GVersion.cpp
src/shaders/: Add.fs  CRT.fs  Common.vs  CommonFramebuffer.vs  Debug.fs  GShaders.cpp.in  GShaders.h.in  TexturedQuad.fs
